--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Practica9</string>
     <string name="loginMsg">Inicio de Sesión</string>
     <string name="btnLogin">Iniciar Sesión</string>
+    <string name="dataTitle">BIENVENIDO</string>
+    <string name="logout">Cerrar Sesión</string>
 </resources>
